--- a/.gitmodules
+++ b/.gitmodules
@@ -41,6 +41,21 @@
 [submodule "agTrend.gam"]
 	path = agTrend.gam
 	url = https://github.com/dsjohnson/agTrend.gam
+[submodule "assertive.base"]
+	path = assertive.base
+	url = https://github.com/cran/assertive.base
+	branch = master
+	registered = false
+[submodule "assertive.properties"]
+	path = assertive.properties
+	url = https://github.com/cran/assertive.properties
+	branch = master
+	registered = false
+[submodule "assertive.types"]
+	path = assertive.types
+	url = https://github.com/cran/assertive.types
+	branch = master
+	registered = false
 [submodule "bayesdfa"]
 	path = bayesdfa
 	url = https://github.com/fate-ewi/bayesdfa
@@ -81,6 +96,11 @@
 	path = rfishbase
 	url = https://github.com/ropensci/rfishbase
 	branch = fb-21.06
+	registered = false
+[submodule "ss3sim"]
+	path = ss3sim
+	url = https://github.com/ss3sim/ss3sim
+	branch = main
 	registered = false
 [submodule "wham"]
 	path = wham
