--- a/.gitmodules
+++ b/.gitmodules
@@ -50,6 +50,9 @@
 [submodule "agTrend.gam"]
 	path = agTrend.gam
 	url = https://github.com/dsjohnson/agTrend.gam
+[submodule "asar"]
+	path = asar
+	url = https://github.com/nmfs-ost/asar
 [submodule "assertive.base"]
 	path = assertive.base
 	url = https://github.com/cran/assertive.base
@@ -111,6 +114,9 @@
 	url = https://github.com/ss3sim/ss3sim
 	branch = main
 	registered = false
+[submodule "stockplotr"]
+	path = stockplotr
+	url = https://github.com/nmfs-ost/stockplotr
 [submodule "wham"]
 	path = wham
 	url = https://github.com/timjmiller/wham
